src/index.css
body {
  font-family: "Poppins", sans-serif;
}
input:focus,
textarea:focus,
select:focus {
  outline: none !important;
}

input,
textarea,
select {
  outline: none !important;
}
.wrapper {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  min-height: 100vh;
  position: relative;
}
.wrapper-down {
  position: absolute;
  /*border: 1px solid black;*/
  height: 70%;
  bottom: 0%;
  background: linear-gradient(1.28deg, #000000 0.91%, rgba(0, 0, 0, 0) 98.77%);
}
.wr-sec {
  position: absolute;
  width: 100%;
  bottom: 7%;
}
.bg-them {
  background-color: #252525;
}
#myHeader {
  position: fixed;
  width: 100%;
  z-index: 1;
  /*height: 7%;*/
}
.mobile-menu {
  background-color: #f6f4f2;
  color: black;
  position: fixed;
  right: 0%;
  width: 75%;
  height: 100%;
  overflow-y: scroll;
  padding-bottom: 20%;
  z-index: 2;
  top: 0%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border: 3px solid black;
}
.overlay {
  position: fixed;
  top: 0%;
  width: 100%;
  height: 100%;
  z-index: 2;
  background-color: black;
  opacity: 0.4;
}
.svg-icon {
  width: 16px;
  height: 16px;
  vertical-align: sub;
}
.svg-icon-lg {
  width: 20px;
  height: 20px;
  vertical-align: sub;
}

.svg-icon-menu {
  width: 22px;
  height: 22px;
  vertical-align: sub;
}
.mm-db {
  position: absolute;
  width: inherit;
  bottom: 5%;
}
.scroll-div::-webkit-scrollbar {
  display: none;
}
.br-0 {
  border-radius: 0;
}
.custom-modal {
  position: fixed;
  top: 25%;
  height: 50%;
  width: 95%;
  left: 2.5%;
  background-color: white;
  z-index: 3;
}
.slings {
  border: 2px solid black !important;
  opacity: 1;
}
.to-center {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}
.center-ver {
  top: 50%;
  transform: translate(-50%, -50%);
}
.ww-25 {
  width: 25% !important;
}
.cover {
  position: fixed;
  top: 0%;
  background-color: #eee;
  height: 100%;
  width: 100%;
  left: 0%;
  z-index: 3;
}
.bor-btm-black {
  border-bottom: 1px solid black !important ;
}
.d-contents {
  transition: 5.5s ease;
  display: contents;
}

.d-flex{
  transition: 5.5s ease;
  display: flex;
}
.cat-div-selec{
  display: flex !important;
  position: fixed !important;
}
.showw {
  display: contents;
  position: static;
  opacity: 1;
  transition: opacity 1s linear;
}
.not-showw {
  position: absolute;
  opacity: 0;
  height: 0%;
  top: -5%;
}
/*.bg-highlight {
  animation: toColor 2s;
}*/
@keyframes toColor {
  0% {
    background-color: white;
  }
  25% {
    background-color: rgb(206, 204, 204);
  }
  50% {
    background-color: white;
  }
  75% {
    background-color: rgb(206, 204, 204);
  }
  100% {
    background-color: white;
  }
}
.min-width-maxcon {
  min-width: max-content;
}
.border-bottom-drk {
  border-bottom: 2px solid black;
}
.sticky {
  transition: 0.5s ease;
  position: fixed;
  /*top: 9%;*/
  width: 93%;
  z-index: 1;
  background-color: #f6f4f2;
  /*padding-top: 2%;*/
  padding-bottom: 2%;
  margin-top: -7%;
}
.sticky + .content {
  padding-top: 102px;
}
.rotate-icon {
  transition: 0.5s ease;
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
}
.rotate-icon-90{
  transition: 0.5s ease;
  -webkit-transform: rotate(180deg);
  transform: rotate(90deg);
}
.counter-rotate-icon {
  transition: 0.5s ease;
  -webkit-transform: rotate(0deg);
  transform: rotate(0deg);
}
.trans-up {
  transform: scale(2);
}
.date-selected {
  background-color: black;
  color: white;
}
select {
  appearance: none !important;
}
.fs-14 {
  font-size: 14px;
}
.fs-12 {
  font-size: 12px;
}
.fs-13 {
  font-size: 13px;
}
.fs-18 {
  font-size: 18px;
}
.fs-23 {
  font-size: 23px;
}
.py-bt {
  padding-top: 0.7rem !important;
  padding-bottom: 0.7rem !important;
}
.pe-bt {
  padding-right: 0.4rem !important;
}
.ps-bt {
  padding-left: 0.4rem !important;
}

/*new index*/
.videoBg {
  object-fit: cover;
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
}
.bg-wrapper {
  position: fixed;
  width: 100%;
  bottom: 5%;
}
.bottom-ovelay{
  position: fixed;
  width: 100%;
  bottom: 0%;
  height: 545px;
  background: linear-gradient(1.28deg, rgba(0, 0, 0, 0.87) 0.91%, rgba(0, 0, 0, 0) 98.77%);
}
.animate__animated.animate__slideInRight {
  --animate-duration: 0.2s;
}
.animate__animated.animate__slideOutRight {
  --animate-duration: 0.2s;
}
.animate__animated.animate__slideInLeft {
  --animate-duration: 0.1s;
}
.animate__animated.animate__slideOutLeft {
  --animate-duration: 0.1s;
}
.animate__animated.animate__slideInUp {
  --animate-duration: 0.3s;
}
.animate__animated.animate__slideOutDown {
  --animate-duration: 0.3s;
}
.sp-title {
  font-style: normal;
  font-weight: 600;
  font-size: 40px;
  line-height: 28px;
  color: #ffffff;
  margin: 30px 0;
  text-align: center;
}
.btn-solid {
  font-style: normal;
  font-weight: 600;
  font-size: 1.125rem;
  height: 3.4375rem;
  line-height: 3.4375rem;
  outline: none !important;
  box-shadow: none !important;
  border: 0;
  padding: 0 1rem;
  transition: all 0.2s ease;
}
.big-bg-theme {
  background-color: #f6f4f2;
}
.menu-name {
  font-style: normal;
  font-weight: 500;
  font-size: 18px;
  line-height: 20px;
  margin: 0;
  color: #000000;
  margin-bottom: 5px;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100%;
  overflow: hidden;
}
.menu-border {
  border-top: 2px solid black;
}
.slide {
  border-left: 1px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
}
.img-fluid-slider {
  height: 100%;
  width: 100%;
  max-width: none;
  object-fit: cover;
}
.slick-dots {
  bottom: 5% !important;
}
.bottom-acc {
  border-top: 2px solid #000000;
}
.border-left-right {
  border-left: 2px solid #000000;
  border-right: 2px solid #000000;
}
.slick-dots li button {
  padding: 0 !important;
  height: 9px !important;
  width: 9px !important;
}
.slick-dots li button:before {
  width: 8px !important;
  height: 8px !important;
  background: #f6f4f2 !important;
  border: 1px solid #000000 !important;
  border-radius: 50% !important;
  content: "" !important;
  font-family: none !important;
  opacity: 1 !important;
}
.slick-dots li.slick-active button:before {
  width: 9px !important;
  height: 9px !important;
  background: #000000 !important;
  opacity: 1 !important;
  border: 1px solid #f6f4f2 !important;
}
.max-w-zero {
  max-width: 0 !important;
}
.m-cat-head {
  display: flex;
  position: relative;
}

.cat-left {
  position: relative;
  flex: 0 0 120px;
  max-width: 120px;
  min-height: 120px;
  transition: all 0.2s ease;
}
.cat-left-view {
  flex: 0 0 40px !important;
  min-height: 0px !important;
}

span.cat-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  
}
.border-right-theme{
  border-right: 2px solid black;
}
span.cat-icon img {
  height: 100%;
  width: 100%;
  /*object-fit: cover;*/
}

.stubburn-height{
  height: 128px !important;
}

.cat-right {
  text-align: left;
  padding: 12px;
  position: relative;
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
  overflow: hidden;
}

.cat-right h4 {
  font-style: normal;
  font-weight: 500;
  font-size: 18px;
  line-height: 20px;
  margin: 0;
  color: #000000;
  /*margin-bottom: 5px;*/
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100%;
  overflow: hidden;
}
.cat-right > p {
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 20px;
  color: #4c4e50;
  margin-bottom: 5px;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.cat-right > span {
  display: flex;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #4c4e50;
  min-height: 32px;
  flex: 1 1 auto;
  align-items: flex-end;
  padding-bottom: 5px;
}
.PhoneInputInput {
  background-color: #f6f4f2;
}
.box-shadow {
  box-shadow: -1px 2px #ddd8d8;
}
.border-dashed {
  border: 1px dashed black;
}
#videowrapper {
  position: relative;
  overflow: hidden;
}
#fullScreenDiv {
  min-height: 100%;
  height: 216px;
  width: 100vw;
  padding: 0;
  margin: 0;
  background-color: gray;
  position: relative;
}
#video {
  width: 100vw;
  height: auto;
  margin: auto;
  display: block;
}
@media (min-aspect-ratio: 16/9) {
  #video {
    width: 100vw;
    height: auto;
  }
}

@media (max-aspect-ratio: 16/9) {
  #video {
    height: 100vh;
    width: auto;
    margin-left: 50vw;
    transform: translate(-50%);
  }
}
.br-lf-r {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}
.br-rf-r {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}
.option-selected {
  color: white;
  background-color: black;
}
.cat-button {
  padding: 8px 16px !important;
  border-radius: 2px;
  height: 32px;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}
.cat-btn-arr{
  width: 16px;
  height: 16px;
}
.cat-btn-txt{
  height: 16px;
  font-size: 14px;
  line-height: 14px;
}
.mb-08{
  margin-bottom: 0.8rem !important;
}
.PhoneInputCountry {
  margin-right: 16px !important;
}
.fw-500 {
  font-weight: 500 !important;
}
.mw-100{
  min-height: 100vh;
}
.float-add-cat-button{
  position: absolute;
  width: 40%;
}
.br-4{
  border-radius: 4px;
}
.cat-icon{
  position: absolute;
  right: 2%;
  /*bottom: 30%;*/
}
.pos-rel{
  position: relative;
}
.pe-lg{
  cursor: pointer;
  /*margin-right: 15rem !important;*/
}
.pb-100{
  padding-bottom: 100%;
}
.mr-100{
  margin-right: 100%;
}
.not-a{
  text-decoration: none !important;
}

